@@ -39,7 +39,7 @@ then
   exit $errCode
 fi
 "$bin"/hbase-daemon.sh --config "${HADOOP_CONF_DIR}" \
-    --hbaseconfig "${HBASE_CONF_DIR}" master start
+    --hbaseconfig "${HBASE_CONF_DIR}" start master 
 "$bin"/hbase-daemons.sh --config "${HADOOP_CONF_DIR}" \
     --hbaseconfig "${HBASE_CONF_DIR}" --hadoop "${HADOOP_HOME}" \
-    --hosts "${HBASE_REGIONSERVERS}" regionserver start
+    --hosts "${HBASE_REGIONSERVERS}" start regionserver
