@@ -30,4 +30,4 @@ bin=`cd "$bin"; pwd`
 . "$bin"/hbase-config.sh
 
 "$bin"/hbase-daemon.sh --config "${HADOOP_CONF_DIR}" \
-    --hbaseconfig "${HBASE_CONF_DIR}" master stop
+    --hbaseconfig "${HBASE_CONF_DIR}" stop master
